--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -38,7 +38,7 @@
                 <tbody>
                     <tr th:each="task : ${taskList}">
                         <td class="hidden" th:text="${task.id}"></td>
-                        <td th:text="${task.task}"></td>
+                        <td th:text="${task.detail}"></td>
                         <td width="100px" th:text="${task.deadline}"></td>
                         <td width="50px" th:text="${task.done} ? '完了': '未完了'"></td>
                         <td width="50px">
