--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -6,7 +6,9 @@
   <link rel="stylesheet" href="mypage.css" />
 </head>
 <body>
-
+  <!-- headerのフラグメント作成⇒他のHTMLで使用できるようにする -->
+	<div th:replace="header :: Header"></div>
+  
   <h1 th:text="${username} + 'さんのマイページ'">ユーザー名さんのマイページ</h1>
 
   <div class="user-info">
