--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>マイページ</title>
   <link rel="stylesheet" href="mypage.css" />
+  <link th:href="@{/header.css}" rel="stylesheet">
 </head>
 <body>
   <!-- headerのフラグメント作成⇒他のHTMLで使用できるようにする -->
