--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -10,8 +10,11 @@
 	    <input type="text" th:field="*{username}" placeholder="ユーザー名" required /><br>
 	    <input type="password" th:field="*{password}" placeholder="パスワード" required /><br>
 	    <input type="email" th:field="*{email}" placeholder="メールアドレス" required /><br>
+		<input type="text" name="inviteCode" placeholder="招待コード" required /><br>
 	    <button type="submit">登録</button><br>
 	</form>
+	<p th:if="${error}" th:text="${error}"></p>
+	
 	<div class="nav-links">
         <a th:href="@{/login}">戻る</a>
 	</div>
