--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -79,7 +79,7 @@
                     <label>タスク</label>
                     <input id="add_title" name="title" type="text" />
                     <label>説明</label>
-                    <input id="add_detail" name="detail" type="text" />
+                    <textarea id="add_detail" name="detail" rows="4"></textarea>
                     <label>期限</label>
                     <div class="deadline-inputs">
                     <input id="add_deadline" name="deadline" type="date" />
@@ -112,7 +112,7 @@
                     <label>タスク</label>
                     <input id="update_title" name="title" type="text" />
                     <label>説明</label>
-                    <input id="update_detail" name="detail" type="text" />
+                    <textarea id="update_detail" name="detail" rows="4"></textarea>
                     <label>期限</label>
                     <div class="deadline-inputs">
                     <input id="update_deadline" name="deadline" type="date" />
