--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -10,29 +10,29 @@
     <body class="mainHeader">
         <!-- headerのフラグメント作成⇒他のHTMLで使用できるようにする -->
 	    <div th:replace="header :: Header"></div>
-        <!-- <h1>タスク管理アプリケーション</h1>
+        <div class="todaylist">
+            <h2>今日のタスク</h2>
+            <table border="1">
+                <thead>
+                <tr>
+                    <th class="hidden">ID</th>
+                    <th>タスク</th>
+                    <th width="150px">時間</th>
+                    <th width="100px">優先度</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="today : ${todayList}">
+                    <td class="hidden" th:text="${today.id}"></td>
+                    <td th:text="${today.title}"></td>
+                    <td th:text="${today.time}"></td>
+                    <td th:text="${today.priority}"></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
 
-        <div class="task_form">
-            <h2>タスクの管理</h2>
-            <form action="#" th:action="@{/list/add}" method="post">
-                <label>タスク</label>
-                <input name="title" type="text" required/>
-                <label>詳細</label>
-                <input name="title" type="text" required/>
-                <label>期限</label>
-                <span>
-                <input name="deadline" type="date" required/>
-                <input name="time" type="time" required/>
-                </span>
-                <label>優先度</label>
-                    <select id="update_priority" name="priority">
-                    <option value="高">高</option>
-                    <option value="中" selected>中</option>
-                    <option value="低">低</option>
-                    </select>
-                <input type="submit" value="登録" />
-            </form>
-        </div> -->
+     
 
         <div class="tasklist">
             <h2>現在のタスク一覧</h2>
