--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>ヘッダー</title>
+    <title>タスク管理/ヘッダー</title>
 </head>
 <body>
     <!--フラグメント作成（他のhtmlで使えるようにする）-->
