--- a/src/main/resources/templates/mypage.html
+++ b/src/main/resources/templates/mypage.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8" />
-  <title>マイページ</title>
+  <title>タスク管理/マイページ</title>
   <link rel="stylesheet" href="mypage.css" />
   <link th:href="@{/header.css}" rel="stylesheet">
 </head>
