--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -16,33 +16,34 @@
         <div class="todaylist">
             <!-- 現在時刻表示 -->
             <div id="current-time" style="font-size:1rem; color:#2c3e50; margin-bottom:16px;" class="current-time">
-            <h2 class="task-date" id="taskDate">--月--日(-)のタスク</h2>
-           <h2 id="clock"> --時--分--秒</h2>
+                <h2 class="task-date" id="taskDate">--月--日(-)のタスク</h2>
+                <h2 id="clock"> --時--分--秒</h2>
             </div>
-                <ul class="today-list">
-                    <li th:each="today : ${todayList}"
-                        th:if="${today != null}"
-                        th:class="|today-item priority-${today.priority.toLowerCase()}|"
-                        th:attr=" data-deadline-date=${today.deadline}, 
-                                data-deadline-time=${today.time != null ? today.time : '00:00'}">
-                        <div class="item-main">
-                        <!-- 時間も null 安全ガード -->
-                        <span class="item-time"
-                                th:text="${today.time != null   ? #temporals.format(today.time, 'H時mm分') : ''}">
-                            00時00分
-                        </span>
-                        <!-- タイトルも null 安全ガード -->
-                        <span class="item-title"
-                                th:text="${today.title != null ? today.title : ''}">
-                            タスク名
-                        </span>
-                        </div>
-                        <span class="item-priority"
+            <ul class="today-list">
+                <li th:each="today : ${todayList}"
+                    th:if="${today != null}"
+                    th:class="|today-item priority-${today.priority.toLowerCase()}|"
+                    th:attr=" data-deadline-date=${today.deadline}, 
+                            data-deadline-time=${today.time != null ? today.time : '00:00'}">
+                    <div class="item-main">
+                    <!-- 時間も null 安全ガード -->
+                    <span class="item-time"
+                            th:text="${today.time != null   ? #temporals.format(today.time, 'H時mm分') : ''}">
+                        00時00分
+                    </span>
+                    <!-- タイトルも null 安全ガード -->
+                    <span class="item-title"
+                            th:text="${today.title != null ? today.title : ''}">
+                        タスク名
+                    </span>
+                    </div>
+                    <span class="item-priority"
                             th:text="${today.priority != null ? today.priority : ''}">
-                         高
-                        </span>
-                    </li>
-                </ul>
+                        高
+                    </span>
+                </li>
+            </ul>
+        </div>
 
 
      
@@ -52,11 +53,17 @@
                 <!-- 固定したい見出し -->
                 <div class="table-header">
                 <h2 class="table-heading">現在のタスク一覧</h2>
+                <button id="selectList">一括選択モード</button>
+                <button id="completeSelectedButton">完了</button>
+                <button id="deleteTasks">削除</button>
                 <table border="1">
                     <thead>
 
                         <tr>
-                            <th class="hidden">ID</th>
+                            <th>
+                            <button id="checkAllButton">全選択</button>
+                            </th>
+                        <th class="hidden">ID</th>
                             <th>タスク</th>
                             <th width="150px">期限</th>
                             <th width="150px">時間</th>
@@ -68,7 +75,12 @@
                     </thead>
                     </div>
                     <tbody>
-                        <tr th:each="task : ${taskList}">
+                        <tr th:each="task : ${taskList}" th:attr="data-done=${task.done}">
+                        <td>
+                            <label style="display: block; cursor: pointer;">
+                                <input type="checkbox" name="taskCheckbox" th:value="${task.id}" />
+                            </label>
+                        </td>
                             <td class="hidden" th:text="${task.id}"></td>
                             <td th:text="${task.title}"></td>
                             <td width="100px" th:text="${task.deadline}"></td>
@@ -174,5 +186,6 @@
         </div>
 
     <script th:src="@{/taskList.js}" defer></script>
+    <script th:src="@{/checkbox.js}" defer></script>
     </body>
 </html>
