--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -230,5 +230,6 @@
             <button onclick="closeStatusFilterPopup()">閉じる</button>
         </div>
         <script th:src="@{/taskList.js}" defer></script>
+        <script th:src="@{/tasklist_pop.js}" defer></script>
     </body>
 </html>
